# mkcert

./: .gitignore  Cargo.toml  README.adoc  template.yaml  template_csr.yaml  template_empty.yaml  template_self_signed.yaml  template_with_errors.yaml
.github/workflows/: release.yml
container/: Containerfile
examples/: multiple_requests.yaml  request.yaml  self_signed.yaml
src/: lib.rs  main.rs
tests/: integration_test.rs  template_empty.yaml  template_with_errors.yaml
